# GHEX-old

./: CMakeLists.txt  notes.md
benchmarks/: comm_2_test_halo_exchange_3D_generic_full.cpp  simple_comm_test_halo_exchange_3D_generic_full.cpp
include/: buffer_info.hpp  communication_object.hpp  communication_object_2.hpp  coordinate.hpp  definitions.hpp  devices.hpp  gridtools_arch.hpp  pattern.hpp  simple_field_wrapper.hpp  structured_domain_descriptor.hpp  structured_grid.hpp  structured_pattern.hpp  utils.hpp
include/allocator/: persistent_allocator.hpp
include/protocol/: communicator_base.hpp  future.hpp  mpi.hpp  setup.hpp
include/prototype/: generic_interfaces.hpp
include/transport_layer/: communicator.hpp  message.hpp
include/transport_layer/mpi/: communicator.hpp  communicator_traits.hpp  message.hpp
tests/: communication_object.cpp  communication_object_2.cpp  generic_interfaces.cpp  generic_interfaces1D_mt.cpp  mpi_allgather.cpp
tests/transport/: CMakeLists.txt  test_cancel_request.cpp  test_comm_dispatch.cpp  test_low_level.cpp  test_low_level_x.cpp  test_persistent_allocator.cpp  test_send_multi.cpp
